categories menu added

--- a/index.html
+++ b/index.html
@@ -221,6 +221,16 @@
                             <i class="ri-arrow-right-s-line"></i>
                           </div>
                         </a>
+                        <ul>
+                          <li><a href="#">Makeup</a></li>
+                          <li><a href="">Skin Care</a></li>
+                          <li><a href="">Hair Care</a></li>
+                          <li><a href="">Fragrance</a></li>
+                          <li><a href="">Foot & Hand Care</a></li>
+                          <li><a href="">Tools & Accessories</a></li>
+                          <li><a href="">Shave & Hair Removal</a></li>
+                          <li><a href="">Personal Care</a></li>
+                        </ul>
                       </li>
                       <li class="has-child electric">
                         <a href="">
@@ -232,6 +242,16 @@
                             <i class="ri-arrow-right-s-line"></i>
                           </div>
                         </a>
+                        <ul>
+                          <li><a href="#">Makeup</a></li>
+                          <li><a href="">Skin Care</a></li>
+                          <li><a href="">Hair Care</a></li>
+                          <li><a href="">Fragrance</a></li>
+                          <li><a href="">Foot & Hand Care</a></li>
+                          <li><a href="">Tools & Accessories</a></li>
+                          <li><a href="">Shave & Hair Removal</a></li>
+                          <li><a href="">Personal Care</a></li>
+                        </ul>
                       </li>
 
                       <li class="has-child fashion">
@@ -244,6 +264,16 @@
                             <i class="ri-arrow-right-s-line"></i>
                           </div>
                         </a>
+                        <ul>
+                          <li><a href="#">Makeup</a></li>
+                          <li><a href="">Skin Care</a></li>
+                          <li><a href="">Hair Care</a></li>
+                          <li><a href="">Fragrance</a></li>
+                          <li><a href="">Foot & Hand Care</a></li>
+                          <li><a href="">Tools & Accessories</a></li>
+                          <li><a href="">Shave & Hair Removal</a></li>
+                          <li><a href="">Personal Care</a></li>
+                        </ul>
                       </li>
                       <li>
                         <a href="">
@@ -287,6 +317,73 @@
                             <i class="ri-arrow-right-s-line"></i>
                           </div>
                         </a>
+                        <div class="mega">
+                          <div class="flexcol">
+                            <div class="row">
+                              <h4><a href="#">Kitchen & Dining</a></h4>
+                              <ul>
+                                <li><a href="#">Makeup</a></li>
+                                <li><a href="">Skin Care</a></li>
+                                <li><a href="">Hair Care</a></li>
+                                <li><a href="">Fragrance</a></li>
+                              </ul>
+                            </div>
+                            <div class="row">
+                              <h4><a href="#">Living</a></h4>
+                              <ul>
+                                <li><a href="#">Makeup</a></li>
+                                <li><a href="">Skin Care</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <div class="flexcol">
+                            <div class="row">
+                              <h4><a href="#">Bed & Bath</a></h4>
+                              <ul>
+                                <li><a href="#">Makeup</a></li>
+                                <li><a href="">Skin Care</a></li>
+                                <li><a href="">Hair Care</a></li>
+                                <li><a href="">Fragrance</a></li>
+                              </ul>
+                            </div>
+                            <div class="row">
+                              <h4><a href="#">Utitily</a></h4>
+                              <ul>
+                                <li><a href="#">Makeup</a></li>
+                                <li><a href="">Skin Care</a></li>
+                                <li><a href="">Hair Care</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <div class="flexcol">
+                            <div class="row">
+                              <h4><a href="#">Outdoor</a></h4>
+                              <ul>
+                                <li><a href="#">Makeup</a></li>
+                                <li><a href="">Skin Care</a></li>
+                                <li><a href="">Hair Care</a></li>
+                                <li><a href="">Fragrance</a></li>
+                                <li><a href="">Foot & Hand Care</a></li>
+                                <li><a href="">Tools & Accessories</a></li>
+                                <li><a href="">Shave & Hair Removal</a></li>
+                                <li><a href="">Personal Care</a></li>
+                              </ul>
+                            </div>
+                            <!-- <div class="row">
+                              <h4><a href="#">Utitily</a></h4>
+                              <ul>
+                                <li><a href="#">Makeup</a></li>
+                                <li><a href="">Skin Care</a></li>
+                                <li><a href="">Hair Care</a></li>
+                                <li><a href="">Fragrance</a></li>
+                                <li><a href="">Foot & Hand Care</a></li>
+                                <li><a href="">Tools & Accessories</a></li>
+                                <li><a href="">Shave & Hair Removal</a></li>
+                                <li><a href="">Personal Care</a></li>
+                              </ul>
+                            </div> -->
+                          </div>
+                        </div>
                       </li>
                       <li>
                         <a href="">
